# agent-watch

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: codex-for-oss-application.md  demo.md  deployment.md  development.md  maintainer-workflows.md  obsidian.md  sources.md
examples/: en-markdown.yaml  github-actions-workflow.yml  zh-obsidian.yaml
src/agent_watch/: __init__.py  cli.py  config.py  models.py  ranking.py  rendering.py  state.py  summarization.py  templates.py  utils.py
src/agent_watch/sources/: __init__.py  arxiv.py  github.py  hackernews.py  rss.py  semantic_scholar.py
templates/: markdown_month.md.j2  obsidian_month.md.j2
tests/: test_cli.py  test_config.py  test_ranking.py  test_rendering.py  test_sources.py  test_state.py
tests/fixtures/: arxiv_sample.xml  rss_sample.xml  semantic_scholar_sample.json
