[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agent-watch"
version = "0.1.1"
description = "Collect, rank, summarize, and archive AI agent technology updates as Markdown."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "radawaysp" }
]
keywords = ["ai-agents", "markdown", "obsidian", "rss", "arxiv", "github"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
  "feedparser>=6.0.11",
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "pydantic>=2.8.0",
  "python-dateutil>=2.9.0.post0",
  "pyyaml>=6.0.1",
  "typer>=0.12.3",
]

[project.optional-dependencies]
llm = ["openai>=1.40.0"]
dev = [
  "mypy>=2.1.0",
  "pytest>=8.2.0",
  "pytest-cov>=7.1.0",
  "respx>=0.23.1",
  "ruff>=0.5.0",
  "types-python-dateutil>=2.9.0.20241206",
  "types-PyYAML>=6.0.12.20260518",
]

[project.scripts]
agent-watch = "agent_watch.cli:app"

[project.urls]
Homepage = "https://github.com/radawaysp/agent-watch"
Repository = "https://github.com/radawaysp/agent-watch"
Issues = "https://github.com/radawaysp/agent-watch/issues"
Changelog = "https://github.com/radawaysp/agent-watch/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_watch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["agent_watch"]

[[tool.mypy.overrides]]
module = ["feedparser"]
ignore_missing_imports = true
